--- a/README
+++ b/README
@@ -4,14 +4,29 @@ MySQL Improved Extension (http://www.php.net/manual/en/book.mysqli.php).
 
 main features of this class are
 
-1) Simple API
+1) Simple API - native SQL queries are used.
 2) Portable - single api is usable for MySQL,MySQLi,PostgreSQL(planned) et cetera.
 3) Build in escaper for protection against SQL injections (but for protection from XSS 
 (http://en.wikipedia.org/wiki/Cross-site_scripting) we need some HTML filtering functions not included in this package!)
-4) Singleton assembly of class - no multiple sql connection per script, and sql queries are accesible from every scope of view
-- from class, from function, from global...
+4) Singleton assembly of class - no multiple sql connection per script, and sql queries are accesible from every 
+scope of view - from class, from function, from global...
 5) Build in tools for logging SQL requests and their results.
 
+
+------------
+|CRASH DIVE|
+------------
+
+/* 0 */ include ('DB.php');
+
+/* 1 */ DB::q('INSERT INTO users(`name`) VALUES ("'.DB::f($_POST['name']).'")'); 
+
+//execute query for creating new entry in table `users` (SQL-injection save)
+
+/* 2 */ $users=DB::q('SELECT * FROM users'); //execute query to fetch assotiated array of rows of table  `users`
+foreach($users as $user) echo $user['name]; //
+
+/* 3 */ $stats=DB::s(); //fetch array with usefull statistical information about all mysql queries executed
 ----------
 |EXAMPLES|
 ----------
