--- a/README
+++ b/README
@@ -110,106 +110,57 @@ credentials to database
 ----------------
 |Full syntaxis |
 ----------------
-All supported commands
 
-****************************************
-*DB::q(string $mysql_query)	       *
-*DB::init()->query(string $mysql_query)*
-****************************************
-
- - execute the $mysql_query. The return of this function depends on the query.
-if the query is insert,update,delete - the result is TRUE on success and FALSE on problems. 
-
-If $mysql_query is a 'select' type query (which meants this query retrieves data from database), 
-the result is a 2 dimensional array,where the first unassotiated array is for the rows of request 
-and this array consists of assotiated arrayes of columns.
-For example, we have the table of users, which is created by this 2 queries
-
-CREATE TABLE `users` (
-  `id` int(8) unsigned NOT NULL,
-  `name` char(63) NOT NULL,
-  UNIQUE KEY `id` (`id`)
-) ENGINE=InnoDB DEFAULT CHARSET=utf8;
-
-INSERT INTO `users` (`id`, `name`) VALUES
-(1,	'Vladimir'),
-(2,	'Ivan'),
+Quick reference
 
 
-So, the command DB::q('SELECT * FROM users')
+-------------------
+|DB::q($sql_query)|
+-------------------
+perform $sql_query with active database. If query returns rows, return an associated arrayes of rows,
+where rows are depicted as assotiated arrays or as objects if constant DB_FETCH_ROW_AS_OBJECT is true
 
-will return 
+Example
 
-array(
-	array('id'=>1,'name'=>'Vladimir'),
-	array('id'=>2,'name'=>'Ivan'),
-);
+<?php
+$databases=DB::q('SHOW DATABASES');
+foreach($databases as $database)
+    {
+    echo $database['Database'].PHP_EOL;
 
-***********************
-*DB::init()->getLink()*
-***********************
-Returns the resource descriptor for mysql interaction
-For example (for mysql driver)
-
-$link=DB::init()->getLink();
-if(mysql_ping($link)) echo 'OK!';
-
-
-*******************************
-*DB::init()->getLastInsertId()*
-*******************************
-If last query was an insert query, this command will return the id of last inserted object.
+// or when DB_FETCH_ROW_AS_OBJECT is TRUE
+//    echo $database->Database.PHP_EOL;
+    }
 
 
-*******************************
-*DB::filter(string $a)	      *
-*DB::init()->filter(string $a)*
-*DB::f(string $a)             *
-*******************************
-Return escaped version of the string. 
+------------------
+|DB::f(string $a)|
+------------------
+
+Return escaped version of the string.
 See
 http://php.net/manual/en/function.mysql-real-escape-string.php
 http://php.net/manual/en/mysqli.real-escape-string.php
 for details.
 
-**********************
-*DB::init()->getRes()*
-*DB::r()	     *
-**********************
-Returns the result object of last query.For example
-
-DB::q('SELECT * FROM users WHERE `name`="Vladimir"');
-$res=DB::init()->getRes();
-echo mysql_result($res,0,'name');
-
-
-
-************************
-*DB::init()->getError()*
-*DB::err()	       *
-************************
-If last SQL query had an errors, returns the string descripting this errors.
-if there is no errors, returns false;
-
-
-***************************************************************************
-*DB::update($table_name,$assosiated_array_of_parameters,$where_condition);*
-***************************************************************************
+---------------------------------------------------------------------------
+|DB::update($table_name,$assosiated_array_of_parameters,$where_condition);|
+---------------------------------------------------------------------------
 Update table.
 For example
 
 $arr=array('name'=>'Jon');
 DB::update('USERS',$arr,'`id`=1');
 
-Will execute query 
+Will execute query
 
 UPDATE `USERS` SET `name`='Jon' WHERE `id`=1
 
 NOTE: statistical data on query will be accaunted!
 
-**********************************************************
-*DB::insert($table_name,$assosiated_array_of_parameters);*
-**********************************************************
+----------------------------------------------------------
+|DB::insert($table_name,$assosiated_array_of_parameters);|
+----------------------------------------------------------
 
 Insert data table.
 For example
@@ -217,17 +168,15 @@ For example
 $arr=array('name'=>'Jon');
 DB::insert('USERS',$arr);
 
-Will execute query 
+Will execute query
 
 INSERT INTO `USERS`(`name`) VALUES ('Jon')
 
 NOTE: statistical data on query will be accaunted!
 
-
-************************
-*DB::init()->getStats()*
-*DB::s()	       *
-************************
+----------
+|DB::s() |
+----------
 Returns information about all queries executed during this script running.
 This function returns array describing query information
 For example
@@ -237,49 +186,54 @@ PRINT_R(DB::s())
 
 array(
 [0]=>array(
-	'type'=>'SELECT',			//type of query
-	'query'=>'SELECT * FROM `users`',	//query string
-	'time'=>20,				//duration of execution of query in miliseconds	
-	'status'=>'OK',				//status of query
-	'affected rows'=>451,			//number of rows affected
-   	  );
+    'type'=>'SELECT',			//type of query
+    'query'=>'SELECT * FROM `users`',	//query string
+    'time'=>20,				//duration of execution of query in miliseconds
+    'status'=>'OK',				//status of query
+    'affected rows'=>451,			//number of rows affected
+         );
 
 [1]=>array(
-	'type'=>'UPDATE',
-	'query'=>'UPDATE `users` SET `name`="Pasha" WHERE id=2',
-	'time'=>32,
-	'status'=>'OK',
-	'affected rows'=>1,
-   	  );
+    'type'=>'UPDATE',
+    'query'=>'UPDATE `users` SET `name`="Pasha" WHERE id=2',
+    'time'=>32,
+    'status'=>'OK',
+    'affected rows'=>1,
+         );
 
 [2]=>array(
-	'type'=>'INSERT',
-	'query'=>'INSERT INTO `users`(`name`) VALUES ("Pasha")',
-	'time'=>33,
-	'status'=>'MySQL error: duplicate key `name` for value "Pasha"',
-	'affected rows'=>0
-   	  );
+    'type'=>'INSERT',
+    'query'=>'INSERT INTO `users`(`name`) VALUES ("Pasha")',
+    'time'=>33,
+    'status'=>'MySQL error: duplicate key `name` for value "Pasha"',
+    'affected rows'=>0
+         );
 )
+
+---------------
+|DB::getLink()|
+---------------
+Returns mysql link descriptor
+for exapmle for use with mysql_query(' ,,, ',DB::getLink());
+The data type of return value depends on active driver!
+
+--------------
+|DB::getRes()|
+--------------
+Returns current resource descriptor for
+example for use with mysql_num_rows(DB::getRes());
+The data type of return value depends on active driver!
+
+-----------------------
+|DB::getLastInsertId()|
+-----------------------
+Returns the ID of last inserted value, where id - is Auto Incrementing key of table;
+
+----------------
+|DB::getError()|
+----------------
+Returns the string with description of last mysql error
+
 
 
 This is all!
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
