Users of DBq added

--- a/README
+++ b/README
@@ -231,3 +231,11 @@ Returns the string with description of last mysql error
 
 
 This is all!
+
+
+DBq is now used by (confirmed use)
+
+http://spravtorg.ru - Online Reference book of trading equipment
+http://teksi.ru - create free site with quikform in 10 seconds
+http://fotobase.org - community of professional photographers and photomodels
+http://s-tv.ru - teleprogramms for mass media
